--- a/index.html
+++ b/index.html
@@ -28,25 +28,32 @@
 
 <section>
 
-<div id="centre" >
+
+<div> <button id ="accueil" style = "display : all;"> AFFICHER LES ELEMENTS CENTRAUX </button> 
+</div>
+
+
+
+<div id = "centre" style = "display: none;"> 
 
 	<div> <img src="images/logogoogle.png " alt="logo"> </div> </br> </br> 
 
 	<div> <form action="" class="formulaire">
 	               <input class="champ" type="text" />    
 	               </form>
+        </br>
+
+       	<input type="submit" name="envoi" style= "margin-left: 160px; background-color: #F2F2F2; width: 140px;
+    height: 40px; font-weight: bold; font-size: 12px; color: grey; background-color: #F2F2F2; margin-right: 5px;
+	border-style: none;" value="Recherche Google ">
+
+
+        <input type="submit" name="envoi" style= " background-color: #F2F2F2; width: 140px;
+    height: 40px; font-weight: bold; font-size: 12px; color: grey; background-color: #F2F2F2; margin-right: 5px;
+	border-style: none;" value="J'ai de la chance"> 
+
 	</div> </br>
 
-	<div id="buttons" >
-		 
-		<div> <button class="button2" size="30" >Recherche Google</button>
-	 	</div>
-		<div> <button class="button2">J'ai de la chance</button> 
-		</div>
-	 
-	</div>
-
-</div>
 
 </section>
 
@@ -81,5 +88,6 @@
 </body>
 
 
+<script src = "main.js" type="text/javascript"></script>
 
 </html>
